# events_users

./: Dockerfile  README.md  deploy.sh  docker-compose.yml  manage.py  pyproject.toml
accounts/: event_form.py  tests.py  urls.py  user_creation_form.py  views.py
accounts/migrations/: 0001_initial.py  0002_auto_20200729_1804.py  0003_auto_20200731_2137.py
accounts/templates/event/: create_event.html  show_events.html
accounts/templates/registration/: login.html
events/: asgi.py  settings.py  urls.py  wsgi.py
events_users/: apps.py  event_form.py  models.py  tests.py  urls.py  views.py
events_users/migrations/: 0001_initial.py
events_users/templates/event/: show_events.html
events_users/templates/registration/: sign_up.html
eventsusers/: asgi.py  settings.py  urls.py  wsgi.py
