[tool.poetry]
name = "events_users"
version = "0.1.0"
description = "A Django application to create and handle events"
authors = ["Cesar Munoz <xcumail@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.0.8"
psycopg2-binary = "^2.8.5"
django-crispy-forms = "^1.9.2"
redis = "^3.5.3"
asgiref = "^3.2.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
